unpackaged/objects/copado__Stage_Connection__c.object
<CustomObject>
	<fields>
		<fullName>copado__Next_Stage_Connection__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<inlineHelpText>Leave this field empty if this is the last stage of your pipeline. Otherwise, select the next higher stage. You can only select stage connections that belong to this pipeline.</inlineHelpText>
		<label>Next Stage Connection</label>
		<lookupFilter>
			<active>true</active>
			<errorMessage>You can only select Stage Connections that belong to the same Pipeline.</errorMessage>
			<filterItems>
				<field>copado__Stage_Connection__c.copado__Pipeline__c</field>
				<operation>equals</operation>
				<valueField>$Source.copado__Pipeline__c</valueField>
			</filterItems>
			<isOptional>false</isOptional>
		</lookupFilter>
		<referenceTo>copado__Stage_Connection__c</referenceTo>
		<relationshipLabel>Previous Stage Connections</relationshipLabel>
		<relationshipName>Next_Stage_Connections</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Next_Stage__c</fullName>
		<formula>HYPERLINK(&quot;/&quot; &amp; copado__Next_Stage_Connection__r.copado__Stage__r.Id, copado__Next_Stage_Connection__r.copado__Stage__r.copado__Display_Name__c, &quot;_self&quot;)</formula>
		<label>Next Stage</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Pipeline__c</fullName>
		<label>Pipeline</label>
		<referenceTo>copado__Deployment_Flow__c</referenceTo>
		<relationshipName>Pipeline_Stages</relationshipName>
		<relationshipOrder>0</relationshipOrder>
		<type>MasterDetail</type>
	</fields>
	<fields>
		<fullName>copado__Stage__c</fullName>
		<label>Stage</label>
		<referenceTo>copado__Stage__c</referenceTo>
		<relationshipName>Pipeline_Stages</relationshipName>
		<relationshipOrder>1</relationshipOrder>
		<type>MasterDetail</type>
	</fields>
	<label>Stage Connection</label>
	<nameField>
		<displayFormat>SC-{0000}</displayFormat>
		<label>Stage Connection Name</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Stage Connections</pluralLabel>
	<sharingModel>ControlledByParent</sharingModel>
</CustomObject>